--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-scrapy
-montydb
-fire
-rich
+scrapy~=2.11.2
+montydb~=2.5.3
+fire~=0.6.0
+rich~=13.7.1
 twisted
+itemloaders~=1.3.1
+itemadapter~=0.9.0
