--- a/di_config.ini
+++ b/di_config.ini
@@ -1,4 +1,4 @@
 [database]
 location=${JOB_DB_LOCATION:local}
-username=${JOB_DB_CONNECTION_USERNAME}
-password=${JOB_DB_CONNECTION_PASSWORD}
+username=${JOB_DB_CONNECTION_USERNAME:'None'}
+password=${JOB_DB_CONNECTION_PASSWORD:'None'}
