--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 *.db
+*.log
 *.py[cod]
-.web
-__pycache__
-assets/external/
 .idea
 .mongitadb
-*.log
+.web
 /google.json
+__pycache__
+__pycache__/
+assets/external/
