--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
-scrapy~=2.11.2
-montydb~=2.5.3
-fire~=0.6.0
-rich~=13.7.1
-twisted
-itemloaders~=1.3.1
-itemadapter~=0.9.0
-dataclasses-json
-# ui
-reflex
-crochet                         # run scrapy in process
-openai                          # analyse and composing
-more_itertools                  # one, first
-pydantic                        # rx.Base store
-google-api-python-client        # storage
-google-auth-oauthlib            # storage auth
-requests                        # manually add jobs
-dependency-injector==4.42.0b1   # service injection
-pymongo[srv]                    # remote database
+altair==4.2.2
+Authlib==1.3.2
+blinker==1.8.2
+crochet==2.1.1
+dataclasses-json==0.6.7
+dependency-injector==4.42.0b1
+fire==0.6.0
+flake8==7.1.1
+gitignore_parser==0.1.11
+GitPython==3.1.43
+google-api-python-client==2.143.0
+google-auth-oauthlib==1.2.1
+licensecheck==2024.3
+montydb==2.5.3
+narwhals==1.5.5
+openai==1.42.0
+plotly==5.23.0
+psycopg2-binary==2.9.9
+pyarrow==15.0.2
+pydeck==0.9.1
+pymdown-extensions==10.9
+pymongo==4.8.0
+pytest-ipywidgets==1.37.2
+python-decouple==3.8
+reactor==0.1.4
+Scrapy==2.11.2
+sortedcontainers==2.4.0
+toml==0.10.2
+writer-sdk==0.6.0
+yfinance==0.2.43
+reflex==0.5.10
