--- a/.github/workflows/part_run_tests.yaml
+++ b/.github/workflows/part_run_tests.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --show-source --max-complexity=11 --max-line-length=127 --statistics
+          flake8 . --count --show-source --max-complexity=11 --max-line-length=127 --statistics --exclude .web
       - name: Test with pytest
         run: |
           pytest
