--- a/.github/workflows/part_docker_push.yaml
+++ b/.github/workflows/part_docker_push.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.ACTOR }}
+          username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       # Extract metadata (tags, labels)  for Docker
