Add backend Dockerfile to image build in workflow

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -36,3 +36,4 @@ jobs:
     uses: ./.github/workflows/part_docker_push.yaml
     with:
       image_name: job-management-backend
+      dockerfile: backend.Dockerfile
