--- a/.github/workflows/part_docker_push.yaml
+++ b/.github/workflows/part_docker_push.yaml
@@ -7,6 +7,10 @@ on:
         required: true
         description: The name of the image
         type: string
+      dockerfile:
+        required: true
+        description: The dockerfile used to build the image
+        type: string
     secrets:
       DOCKER_TOKEN:
         required: true
@@ -52,7 +56,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
-          context: .
+          file: ${{ inputs.dockerfile }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
