--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -37,3 +37,5 @@ jobs:
     with:
       image_name: job-management-backend
       dockerfile: backend.Dockerfile
+      build-args: |
+        api_url='http://job-backend.servyy.duckdns.org'
