--- a/.github/workflows/part_docker_push.yaml
+++ b/.github/workflows/part_docker_push.yaml
@@ -67,5 +67,5 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          build-args:
-            api_url: ${{ inputs.backend-api_url }}
+          build-args: |
+            api_url=${{ inputs.backend-api_url }}
