Update backend API URL in workflow file

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -44,4 +44,4 @@ jobs:
     with:
       image_name: job-management-frontend
       dockerfile: frontend.Dockerfile
-      backend-api_url: https://job-api.servyy.duckdns.org/
+      backend-api_url: https://api-job.servyy.duckdns.org/
