Update Python version to use environment variable

--- a/.github/workflows/part_run_tests.yaml
+++ b/.github/workflows/part_run_tests.yaml
@@ -3,6 +3,8 @@ name: Run Python tests
 on:
   workflow_call:
 
+env:
+  python-version: '3.12'
 jobs:
   build:
 
@@ -10,15 +12,13 @@ jobs:
     strategy:
       max-parallel: 4
       fail-fast: true
-      matrix:
-        python-version: [ '3.12', ]
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ env.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ env.python-version }}
           cache: 'pip'
       - name: Install dependencies
         run: |
